--- a/MMM-homeassistant-sensors.css
+++ b/MMM-homeassistant-sensors.css
@@ -9,8 +9,9 @@
 
 .ha-sensors {
     font-size: 15px;
-    line-height: 15px;
-	color: #fff
+    line-height: 18px;
+	font-weight: bold;
+	color: #999
 }
 
 .ha-icon {
