--- a/MMM-homeassistant-sensors.css
+++ b/MMM-homeassistant-sensors.css
@@ -21,8 +21,9 @@
 
 .ha-img {
   text-align: right;
-  height: 20px;
-  width: 20px;
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
 }
 
 .ha-date {
